Getting a little more abstract with some of the old literal CSS and adapting it to work with Bootstrap.

--- a/less/form-anim.less
+++ b/less/form-anim.less
@@ -10,39 +10,6 @@
 
 /* basic stylings ------------------------------------------ */
 
-body {
-  background: url(http://scotch.io/wp-content/uploads/2014/07/61.jpg);
-}
-
-.container {
-  font-family: 'Roboto';
-  width: 600px;
-  margin: 30px auto 0;
-  display: block;
-  background: #FFF;
-  padding: 10px 50px 50px;
-}
-
-h2 {
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-h2 small {
-  font-weight: normal;
-  color: #888;
-  display: block;
-}
-
-.footer {
-  text-align: center;
-}
-
-.footer a {
-  color: #53B2C8;
-}
-/* form starting stylings ------------------------------- */
-
 .group {
   position: relative;
   margin-bottom: 45px;
@@ -80,7 +47,7 @@ input:focus ~ label,
 input:valid ~ label {
   top: -20px;
   font-size: 14px;
-  color: #5264AE;
+  color: @brand-primary;
 }
 
 /* BOTTOM BARS ================================= */
@@ -98,7 +65,7 @@ input:valid ~ label {
   width: 0;
   bottom: 1px;
   position: absolute;
-  background: #5264AE;
+  background: @brand-primary;
   transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -webkit-transition: 0.2s ease all;
@@ -141,7 +108,7 @@ input:focus ~ .highlight {
 
 @-webkit-keyframes inputHighlighter {
   from {
-    background: #5264AE;
+    background: @brand-primary;
   }
   to {
     width: 0;
@@ -151,7 +118,7 @@ input:focus ~ .highlight {
 
 @-moz-keyframes inputHighlighter {
   from {
-    background: #5264AE;
+    background: @brand-primary;
   }
   to {
     width: 0;
@@ -161,7 +128,7 @@ input:focus ~ .highlight {
 
 @keyframes inputHighlighter {
   from {
-    background: #5264AE;
+    background: @brand-primary;
   }
   to {
     width: 0;
