--- a/css/pledge-2015-compiled.css
+++ b/css/pledge-2015-compiled.css
@@ -1091,12 +1091,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #006af3;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #23527c;
+  color: #0049a6;
   text-decoration: underline;
 }
 a:focus {
@@ -1332,11 +1332,11 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #337ab7;
+  color: #006af3;
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #286090;
+  color: #0054c0;
 }
 .text-success {
   color: #3c763d;
@@ -1368,11 +1368,11 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #006af3;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #286090;
+  background-color: #0054c0;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -3114,26 +3114,26 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #006af3;
+  border-color: #005fda;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #ffffff;
-  background-color: #286090;
-  border-color: #122b40;
+  background-color: #0054c0;
+  border-color: #00275a;
 }
 .btn-primary:hover {
   color: #ffffff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #0054c0;
+  border-color: #00449c;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #0054c0;
+  border-color: #00449c;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -3145,8 +3145,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
   color: #ffffff;
-  background-color: #204d74;
-  border-color: #122b40;
+  background-color: #00449c;
+  border-color: #00275a;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -3171,11 +3171,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #006af3;
+  border-color: #005fda;
 }
 .btn-primary .badge {
-  color: #337ab7;
+  color: #006af3;
   background-color: #ffffff;
 }
 .btn-success {
@@ -3443,7 +3443,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #337ab7;
+  color: #006af3;
   font-weight: normal;
   border-radius: 0;
 }
@@ -3464,7 +3464,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #23527c;
+  color: #0049a6;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3610,7 +3610,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #337ab7;
+  background-color: #006af3;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -4039,7 +4039,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #337ab7;
+  border-color: #006af3;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4132,7 +4132,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #337ab7;
+  background-color: #006af3;
 }
 .nav-stacked > li {
   float: none;
@@ -4756,7 +4756,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #337ab7;
+  color: #006af3;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   margin-left: -1px;
@@ -4777,7 +4777,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   z-index: 3;
-  color: #23527c;
+  color: #0049a6;
   background-color: #eeeeee;
   border-color: #dddddd;
 }
@@ -4789,8 +4789,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #006af3;
+  border-color: #006af3;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4907,11 +4907,11 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #337ab7;
+  background-color: #006af3;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #286090;
+  background-color: #0054c0;
 }
 .label-success {
   background-color: #5cb85c;
@@ -4975,7 +4975,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #337ab7;
+  color: #006af3;
   background-color: #ffffff;
 }
 .list-group-item > .badge {
@@ -5048,7 +5048,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #337ab7;
+  border-color: #006af3;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -5162,7 +5162,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #337ab7;
+  background-color: #006af3;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5325,8 +5325,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #006af3;
+  border-color: #006af3;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5342,7 +5342,7 @@ button.list-group-item {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #c7ddef;
+  color: #c0dbff;
 }
 .list-group-item-success {
   color: #3c763d;
@@ -5722,22 +5722,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #006af3;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #006af3;
+  border-color: #006af3;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: #006af3;
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: #006af3;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: #006af3;
 }
 .panel-success {
   border-color: #d6e9c6;
@@ -6778,33 +6778,6 @@ button.close {
   box-sizing: border-box;
 }
 /* basic stylings ------------------------------------------ */
-body {
-  background: url(http://scotch.io/wp-content/uploads/2014/07/61.jpg);
-}
-.container {
-  font-family: 'Roboto';
-  width: 600px;
-  margin: 30px auto 0;
-  display: block;
-  background: #FFF;
-  padding: 10px 50px 50px;
-}
-h2 {
-  text-align: center;
-  margin-bottom: 50px;
-}
-h2 small {
-  font-weight: normal;
-  color: #888;
-  display: block;
-}
-.footer {
-  text-align: center;
-}
-.footer a {
-  color: #53B2C8;
-}
-/* form starting stylings ------------------------------- */
 .group {
   position: relative;
   margin-bottom: 45px;
@@ -6838,7 +6811,7 @@ input:focus ~ label,
 input:valid ~ label {
   top: -20px;
   font-size: 14px;
-  color: #5264AE;
+  color: #006af3;
 }
 /* BOTTOM BARS ================================= */
 .bar {
@@ -6853,7 +6826,7 @@ input:valid ~ label {
   width: 0;
   bottom: 1px;
   position: absolute;
-  background: #5264AE;
+  background: #006af3;
   transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -webkit-transition: 0.2s ease all;
@@ -6888,7 +6861,7 @@ input:focus ~ .highlight {
 /* ANIMATIONS ================ */
 @-webkit-keyframes inputHighlighter {
   from {
-    background: #5264AE;
+    background: #006af3;
   }
   to {
     width: 0;
@@ -6897,7 +6870,7 @@ input:focus ~ .highlight {
 }
 @-moz-keyframes inputHighlighter {
   from {
-    background: #5264AE;
+    background: #006af3;
   }
   to {
     width: 0;
@@ -6906,7 +6879,7 @@ input:focus ~ .highlight {
 }
 @keyframes inputHighlighter {
   from {
-    background: #5264AE;
+    background: #006af3;
   }
   to {
     width: 0;
