Disabled form animation, blocked off Allegiance file sharing.

--- a/less/index.less
+++ b/less/index.less
@@ -11,4 +11,4 @@
 @import "bootstrap/bootstrap.less";
 
 //Custom-built LESS
-@import "form-anim.less"; //CSS form animation.
+//@import "form-anim.less"; //CSS form animation.
